--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,8 +17,8 @@ security:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
                 check_path: /login_check
-                login_path: /
-
+                login_path: /login
+                success_handler: authentication.handler.login_success_handler
             logout:
                 path: /logout
                 target: /
