--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,9 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: AppBundle\Entity\User
-
+    registration:
+            form:
+                type: AppBundle\Form\RegistrationFormType
 assetic:
     debug:          '%kernel.debug%'
     use_controller: '%kernel.debug%'
