--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,6 +7,18 @@ services:
      authentication.handler.login_success_handler:
          class:  AppBundle\Security\LoginSuccessHandler
          arguments:  ['@router', '@security.authorization_checker']
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+     app.form.registration:
+         class: AppBundle\Form\RegistrationFormType
+         tags:
+             - { name: "form.type", alias: "app_user_registration" }
+
+     app.form.invitation:
+         class: AppBundle\Form\InvitationFormType
+         arguments: ['@app.form.data_transformer.invitation']
+         tags:
+             - { name: "form.type", alias: "app_invitation_type" }
+
+     app.form.data_transformer.invitation:
+         class: AppBundle\Form\DataTransformer\InvitationToCodeTransformer
+         arguments: ['@doctrine.orm.entity_manager']
+         public: false
