--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,7 +35,7 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
-    cache: false
+    cache: true
 
 # Doctrine Configuration
 doctrine:
