Added First/Last name to user and registrations.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,6 +74,9 @@ fos_user:
     registration:
             form:
                 type: AppBundle\Form\RegistrationFormType
+    profile:
+            form:
+                type: AppBundle\Form\ProfileFormType
 assetic:
     debug:          '%kernel.debug%'
     use_controller: '%kernel.debug%'
