--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -23,3 +23,9 @@ services:
          class: AppBundle\Form\DataTransformer\InvitationToCodeTransformer
          arguments: ['@doctrine.orm.entity_manager']
          public: false
+
+
+     app.form.profile:
+         class: AppBundle\Form\ProfileFormType
+         tags:
+            - { name: "form.type", alias: "app_user_profile" }
