--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,6 +71,8 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: AppBundle\Entity\User
+    group:
+            group_class: AppBundle\Entity\Office
     registration:
             form:
                 type: AppBundle\Form\RegistrationFormType
