--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,6 @@ fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 _user_bundle:
     resource: "@AppBundle/Resources/config/routing.yml"
+fos_user_group:
+    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+    prefix: /admin/group
