--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -86,3 +86,8 @@ assetic:
     filters:
         cssrewrite: ~
 
+#fos_rest:
+#    format_listener:
+#        prefer_extension:       false
+#    view:
+#        view_response_listener: true
