--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,9 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+app_api:
+    resource: "@AppBundle/Controller/Api"
+    type:     annotation
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 _user_bundle:
@@ -8,3 +11,6 @@ _user_bundle:
 fos_user_group:
     resource: "@FOSUserBundle/Resources/config/routing/group.xml"
     prefix: /admin/group
+#api:
+              #    type:     rest
+              #    resource:
