--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "symfony/assetic-bundle": "^2.7",
-        "knplabs/knp-menu-bundle": "^2.0",
-        "jms/serializer-bundle": "^1.1",
-        "friendsofsymfony/rest-bundle": "^1.7"
+        "knplabs/knp-menu-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
