--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     email_service:
         class: AppBundle\Services\EmailService
-        arguments: ["@service_container"]
+        arguments: ["@swiftmailer.mailer"]
