Adding error handling

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -52,7 +52,6 @@ doctrine:
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
         #   2. Uncomment database_path in parameters.yml.dist
         #   3. Uncomment next line:
-        #     path:     "%database_path%"
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
@@ -71,6 +70,9 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: AppBundle\Entity\User
+    from_email:
+        address:        utusorders@gmail.com.com
+        sender_name:    UtusOrders
     group:
             group_class: AppBundle\Entity\Office
             form:
