--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,11 @@ twig:
     strict_variables: "%kernel.debug%"
     cache:            "%kernel.debug%"
 
+stof_doctrine_extensions:
+    orm:
+        default:
+            softdeleteable: true
+
 # Doctrine Configuration
 doctrine:
     dbal:
@@ -60,6 +65,10 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        filters:
+            softdeleteable:
+                class: Gedmo\SoftDeleteable\Filter\SoftDeleteableFilter
+                enabled: true
 
 # Swiftmailer Configuration
 swiftmailer:
