--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "symfony/assetic-bundle": "^2.7",
-        "knplabs/knp-menu-bundle": "^2.0"
+      "knplabs/knp-menu-bundle": "^2.0",
+      "gedmo/doctrine-extensions": "^2.4",
+      "stof/doctrine-extensions-bundle": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
